when copying a database it should land in the same folder